--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@ Sharanya Gandla
             <div class="col-sm-12 col-md-12 col-lg-4">
                 <div class="row justify-content-center">
                     <div class="col-sm-12 col-md-9 pt-5 image  px-5 px-md-5 px-lg-0 text-center">
-                        <img src="/images/profile.png"
+                        <img src="/images/sharanya1.png"
                             class="img-thumbnail mx-auto"
                             alt=""
                         >
@@ -553,7 +553,7 @@ Sharanya Gandla
 
 <section id="about" class="py-0 py-sm-5">
     <div class="container bg-transparent">
-        <h3 class="text-center bg-transparent">About</h3>
+        <h3 class="text-center bg-transparent">I&#39;m Open to work from December 2022</h3>
         <div class="bg-transparent row justify-content-center px-3 py-5">
             
             <div class="col-sm-12 col-md-8 col-lg-4 mb-5 mb-sm-0 mb-md-5 mb-lg-0 d-none d-sm-none d-md-block">
