--- a/public/index.html
+++ b/public/index.html
@@ -276,7 +276,7 @@ Sharanya Gandla
             <div class="col-sm-12 col-md-12 col-lg-4">
                 <div class="row justify-content-center">
                     <div class="col-sm-12 col-md-9 pt-5 image  px-5 px-md-5 px-lg-0 text-center">
-                        <img src="/images/profile.png"
+                        <img src="/images/sharanya1.png"
                             class="img-thumbnail mx-auto"
                             alt=""
                         >
