--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@ Sharanya Gandla
 
 <section id="about" class="py-0 py-sm-5">
     <div class="container bg-transparent">
-        <h3 class="text-center bg-transparent">About</h3>
+        <h3 class="text-center bg-transparent">I am open to work from December 2023</h3>
         <div class="bg-transparent row justify-content-center px-3 py-5">
             
             <div class="col-sm-12 col-md-8 col-lg-4 mb-5 mb-sm-0 mb-md-5 mb-lg-0 d-none d-sm-none d-md-block">
