updating content in about

--- a/public/index.html
+++ b/public/index.html
@@ -564,7 +564,7 @@ Sharanya Gandla
             
             <div class="col-sm-12 col-md-12 col-lg-8 content">
                 Currently looking for Full-time opportunities. Pursuing master&rsquo;s degree in Data Science with 3 years of professional experience as a Software Engineer at NCR Corporation, Hyderabad, India.
-I have a strong interest in the the intersection of Technology and Business.
+Seeking to work at the intersection of Technology and Business.
 
                 
                 Skills:
